--- a/2212366_WindowForms_Buoi3/WindowsFormsApp1/Bai4/Bài Tập 1.csproj
+++ b/2212366_WindowForms_Buoi3/WindowsFormsApp1/Bai4/Bài Tập 1.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DD020ED6-20DF-449C-B2D1-D02CC0F14031}</ProjectGuid>
+    <ProjectGuid>{25F24DF0-8B51-4D8C-A403-A1D9CB93066A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Bai3</RootNamespace>
-    <AssemblyName>Bai3</AssemblyName>
+    <RootNamespace>Bai4</RootNamespace>
+    <AssemblyName>Bai4</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,17 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormBai4.cs">
+    <Compile Include="PhepTinh.cs" />
+    <Compile Include="FormBai3.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormBai4.Designer.cs">
-      <DependentUpon>FormBai4.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormBai1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormBai1.Designer.cs">
-      <DependentUpon>FormBai1.cs</DependentUpon>
+    <Compile Include="FormBai3.Designer.cs">
+      <DependentUpon>FormBai3.cs</DependentUpon>
     </Compile>
     <Compile Include="FormBai2.cs">
       <SubType>Form</SubType>
@@ -64,11 +59,12 @@
     <Compile Include="FormBai2.Designer.cs">
       <DependentUpon>FormBai2.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormBai3.cs">
+    <Compile Include="HangHoa.cs" />
+    <Compile Include="FormBai1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormBai3.Designer.cs">
-      <DependentUpon>FormBai3.cs</DependentUpon>
+    <Compile Include="FormBai1.Designer.cs">
+      <DependentUpon>FormBai1.cs</DependentUpon>
     </Compile>
     <Compile Include="FormChinh.cs">
       <SubType>Form</SubType>
@@ -86,9 +82,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormBai3.resx">
       <DependentUpon>FormBai3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormBai4.resx">
-      <DependentUpon>FormBai4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormChinh.resx">
       <DependentUpon>FormChinh.cs</DependentUpon>
